--- a/app/styles/styles.css
+++ b/app/styles/styles.css
@@ -2262,6 +2262,18 @@ dd{
   background: #0000;
  }
 
+ .btn-qtyselector{
+  padding: 10px;
+    width: 29%;
+    border-radius: 21px;
+    background: #252324;
+    color: #fff;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+ }
+
 .Toastify__toast-container{
   width: 360px !important;
 }
